--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,11 @@
 .container {
     display: grid;
     grid-template-columns: 800px;
+    grid-template-rows: 100px repeat(2, max-content) ;
     justify-content: center;
-    background-color: #cfcfcf;
-    gap: 10px;
+    background-color: #a1a0a0;
+    gap: 30px;
+    min-height: 100vh;
 }
 
 /* Results board layout */
@@ -50,12 +52,41 @@
 
 /* Game board layout */
 .game-board {
-    background-color:aqua;
+    display: grid;
+    grid-template-columns: repeat(3, 100px);
+    grid-template-rows: repeat(3, 100px);
+    justify-content: center;
+    gap: 10px;
 }
 
 .game-board .cell {
-    width: 100px;
-    height: 100px;
-    background-color: blueviolet;
-    border: 2px solid;
+    background-color: #ffffff;
+    border-radius: 10px;
+}
+
+/* btns layout */
+.btns {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 100px;
+    gap: 20px;
+}
+
+.btns button {
+    padding: 20px;
+    border: none;
+    border-radius: 10px;
+    font-size: 15px;
+    font-weight: bold;
+    width: max-content;
+    height: max-content;
+
+}
+
+.btns button:hover {
+    border: 5px #515ecf solid;
+}
+
+.btns .new-game-btn {
+    justify-self: end;
 }
