--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,10 @@
 .game-board .cell {
     background-color: #ffffff;
     border-radius: 10px;
+    font-size: 70px;
+    font-weight: bold;
+    text-align: center;
+    color: #515ecf;
 }
 
 /* btns layout */
